--- a/MailServer/MailServer.csproj
+++ b/MailServer/MailServer.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -87,7 +88,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="HelperFunctions.cs" />
+    <Compile Include="SerializeHelper.cs" />
     <Compile Include="HtmlConvert.cs" />
     <Compile Include="JsonHelper.cs" />
     <Compile Include="KnownFileTypes.cs" />
@@ -98,7 +99,6 @@
     <Compile Include="OutgoingMessage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SendMailKitSMTP.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="StandardResponse.cs" />
     <EmbeddedResource Include="Form1.resx">
