--- a/MailServer/MailServer.csproj
+++ b/MailServer/MailServer.csproj
@@ -101,6 +101,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="StandardResponse.cs" />
+    <Compile Include="StorageViewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StorageViewer.Designer.cs">
+      <DependentUpon>StorageViewer.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -114,6 +120,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="StorageViewer.resx">
+      <DependentUpon>StorageViewer.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
