--- a/MailServer/MailServer.csproj
+++ b/MailServer/MailServer.csproj
@@ -35,32 +35,32 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle">
-      <HintPath>..\..\..\..\..\..\..\PHDoc_Source\CurrentVersion\HIE\Webservices\PHSendMessage\trunk\PHSendMessage\DLLs\BouncyCastle.dll</HintPath>
+      <HintPath>..\DLLS\BouncyCastle.dll</HintPath>
     </Reference>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.1.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
-      <HintPath>..\packages\BouncyCastle.1.8.1\lib\BouncyCastle.Crypto.dll</HintPath>
+      <HintPath>..\DLLS\BouncyCastle.Crypto.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.5, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <HintPath>..\packages\HtmlAgilityPack.1.4.9.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <HintPath>..\DLLS\HtmlAgilityPack.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
-      <HintPath>..\..\..\..\..\..\..\PHDoc_Source\CurrentVersion\HIE\Webservices\PHSendMessage\trunk\PHSendMessage\DLLs\ICSharpCode.SharpZipLib.dll</HintPath>
+      <HintPath>..\DLLS\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="Ionic.Zip">
-      <HintPath>..\..\..\..\..\..\..\PHDoc_Source\CurrentVersion\HIE\Webservices\PHSendMessage\trunk\PHSendMessage\DLLs\Ionic.Zip.dll</HintPath>
+      <HintPath>..\DLLS\Ionic.Zip.dll</HintPath>
     </Reference>
     <Reference Include="MailKit, Version=1.12.0.0, Culture=neutral, PublicKeyToken=4e064fe7c44a8f1b, processorArchitecture=MSIL">
-      <HintPath>..\packages\MailKit.1.12.0\lib\net451\MailKit.dll</HintPath>
+      <HintPath>..\DLLS\MailKit.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="MimeKit, Version=1.12.0.0, Culture=neutral, PublicKeyToken=bede1c8a46c66814, processorArchitecture=MSIL">
-      <HintPath>..\packages\MimeKit.1.12.0\lib\net451\MimeKit.dll</HintPath>
+      <HintPath>..\DLLS\MimeKit.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Renci.SshNet">
-      <HintPath>..\..\..\..\..\..\..\PHDoc_Source\CurrentVersion\HIE\Webservices\PHSendMessage\trunk\PHSendMessage\DLLs\Renci.SshNet.dll</HintPath>
+      <HintPath>..\DLLS\Renci.SshNet.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -155,6 +155,7 @@
   <ItemGroup>
     <Content Include="SettingsApiDocumentation.txt" />
     <Content Include="TempNotes.txt" />
+    <Content Include="ToDo.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
